--- a/src/app/card-prod/card-prod.component.css
+++ b/src/app/card-prod/card-prod.component.css
@@ -20,7 +20,7 @@
 }
 
 h1 {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   color: #4e4e4e;
   padding: 10px 0px 0px 0px;
   display: block;
@@ -29,14 +29,14 @@ h1 {
 }
 
 h2 {
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   color: #505e47;
   font-weight: bold;
   letter-spacing: 0.1pc;
 }
 
 h3 {
-  font-size: 1.3em;
+  font-size: 1.2em;
 }
 
 h4 {
@@ -179,67 +179,59 @@ form label {
 
 /* Smartphones (portrait and landscape) ----------- */
 /* iPads (portrait and landscape) ----------- */
+.scrollCard {
+  overflow: auto;
+  height: 400px;
+  border: 1px solid gainsboro;
+  padding: 1%;
+}
+
 .list-card2 {
-  background-color: white;
+  width: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.list-card {
-  background-color: #f5f5e0;
-  width: 90%;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
-  margin: 2%;
-  padding-top: 5%;
-  padding-bottom: 5%;
+.list-card2 .list-card {
+  background-color: whitesmoke;
+  margin: auto;
+  width: 50%;
+  height: 50%;
+  padding: 1%;
 }
 
-.list-card .foto {
-  width: 75%;
+.list-card2 .list-card .foto {
+  width: 100%;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.list-card .foto .imgCard {
+.list-card2 .list-card .foto .imgCard {
   padding: 10%;
   width: 100%;
-  border-bottom-left-radius: 40px;
-  border-top-right-radius: 40px;
 }
 
-.list-card .info-derecha {
+.list-card2 .list-card .info-derecha {
   width: 100%;
   margin-left: 7%;
 }
 
-.list-card .info-derecha .list-card-botones {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  text-align: right;
-  margin-top: 7%;
-}
-
-.list-card .info-derecha .list-card-botones .botonAdd {
-  padding: 10px;
-  height: 100%;
-  border: 1px solid gainsboro;
-  margin: 0%;
-  background-color: white;
-  display: block;
-  text-align: center;
+.list-card2 .list-card .info-derecha .descripcion {
+  width: 90%;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
   /* Styles */
-  .list-card .foto .imgCard {
+  .list-card2 .list-card {
+    width: 100%;
+    padding: 1%;
+  }
+  .list-card2 .foto .imgCard {
     padding: 5%;
   }
-  .list-card .info-derecha {
+  .list-card2 .info-derecha {
     width: 100%;
     margin-left: 5%;
     display: -webkit-box;
@@ -250,14 +242,14 @@ form label {
         -ms-flex-direction: row;
             flex-direction: row;
   }
-  .list-card .info-derecha .info {
+  .list-card2 .info-derecha .info {
     margin-top: 1%;
     width: 80%;
   }
-  .list-card .info-derecha .list-card-botones {
+  .list-card2 .info-derecha .list-card-botones {
     margin-top: 7%;
   }
-  .list-card .info-derecha .list-card-botones .botonAdd {
+  .list-card2 .info-derecha .list-card-botones .botonAdd {
     padding: 10px;
     height: 100%;
     border: 1px solid gainsboro;
