--- a/src/app/card-prod/card-prod.component.scss
+++ b/src/app/card-prod/card-prod.component.scss
@@ -1,83 +1,100 @@
 @import '../styles/tipografias.scss';
-.list-card2{
+.conteiner-pedido{
 	background-color: white;
-}
-.list-card{
-	background-color: rgb(245, 245, 224);
-	width: 90%;
-	box-sizing: content-box;
-	margin:2%;
-	padding-top: 5%;
-	padding-bottom: 5%;
-	.foto{
-		width: 75%;
-		box-sizing: border-box;
-		.imgCard{
-			padding: 10%;
-			width: 100%;
-			border-bottom-left-radius: 40px;
-			border-top-right-radius: 40px;
+	width: 100%;
+	position: fixed;
+	z-index: 999;
+	left: 0px;
+	top: 12%;
+	padding: 2%;
+	.btn-cierreCard{
+	  position: absolute;
+	  top: 10%;
+	  right: 10%;
+	  background: none;
+	  border: 1px solid $color-gris;
+	  height: 40px;
+	  width: 40px;
+	  border-radius: 100%;
+	}
+	.scrollCard{
+		overflow: auto;
+		height: 400px;
+		border: 1px solid $color-gris;
+		padding: 1%;
+	}
+	.list-card2{
+		width: 100%;
+		justify-content: center;
+		.list-card{
+			background-color: whitesmoke;
+			margin:auto;
+			width: 50%;
+			height: 50%;
+			padding: 1%;
+			.foto{
+				width: 100%;
+				box-sizing: border-box;
+				.imgCard{
+					padding: 10%;
+					width: 100%;
+				}
+			}
+			.info-derecha{
+				width: 100%;
+				margin-left: 7%;
+				.descripcion{
+					width: 90%;
+				}
+			}
 		}
 	}
-	.info-derecha{
-		width: 100%;
-		margin-left: 7%;
 	
-		.list-card-botones{
+	
+	/* Smartphones (portrait and landscape) ----------- */  
+	@media only screen  
+	and (min-width : 320px)  
+	and (max-width : 480px) {  
+	/* Styles */  
+	
+	.list-card2{
+		.list-card{
+			width: 100%;
+			padding: 1%;
+		}
+		.foto{	
+			.imgCard{
+				padding: 5%;
+			}
+		}
+		.info-derecha{
+			width: 100%;
+			margin-left: 5%;
 			display: flex;
 			flex-direction: row;
-			text-align: right;
-			margin-top: 7%;
-			.botonAdd{
-				padding: 10px;
-				height: 100%;
-				border: $border;
-				margin:0%;
-				background-color: white;
-				display: block;
-				text-align: center
+			.info{
+				margin-top: 1%;
+				width: 80%;
 			}
-		};
-	}
-}
-
-/* Smartphones (portrait and landscape) ----------- */  
-@media only screen  
-and (min-width : 320px)  
-and (max-width : 480px) {  
-/* Styles */  
-.list-card{
-
-	.foto{	
-		.imgCard{
-			padding: 5%;
+			.list-card-botones{
+				margin-top: 7%;
+	
+				.botonAdd{
+					padding: 10px;
+					height: 100%;
+					border: $border;
+					margin:0%;
+					background-color: white;
+					display: block;
+					text-align: center
+				}
+			}
 		}
 	}
-	.info-derecha{
-		width: 100%;
-		margin-left: 5%;
-		display: flex;
-		flex-direction: row;
-		.info{
-			margin-top: 1%;
-			width: 80%;
-		}
-		.list-card-botones{
-			margin-top: 7%;
+  }  
 
-			.botonAdd{
-				padding: 10px;
-				height: 100%;
-				border: $border;
-				margin:0%;
-				background-color: white;
-				display: block;
-				text-align: center
-			}
-		};
-	}
 }
-}  
+
 
  
 /* iPads (portrait and landscape) ----------- */  
