--- a/src/app/list-ver-pedido/ver-pedido.component.html
+++ b/src/app/list-ver-pedido/ver-pedido.component.html
@@ -1,29 +1,42 @@
-      <div class="card">
-        <div class="card-text">
-          <div class="title-total"> 
-            <div>{{mensaje}}</div>
-            <div class="list-card" *ngFor="let p of pedidosTodos let i = index " >
-              <div class="info-derecha">
-                <div class="info">
-                  <p style="color: deeppink; font-weight: bold;">Producto:</p>
+<div class="conteiner-pedido">
+  <button routerLink="/list-card"  class="btn-cierreCard">
+    <i class="fa fa-window-close" aria-hidden="true"  ></i>
+  </button>
+  <div class="scrollCard">
+    <div class="list-card2">
+      <div class="mensaje">
+        <h2>{{mensaje}}</h2>
+      </div>
+        <div class="list-card" class="list-card" *ngFor="let p of pedidosTodos let i = index " >
+          <div class="info-derecha">
+              <div class="info">
+                  <h4 style="text-transform: uppercase;">Producto:</h4>
                   <p >{{p.categoria}}</p>
+                  <p >{{p.subtitulo}}</p>
                   <h3>{{p.titulo}}</h3>
-                  <p> $precio </p>
-                  <p>Cantidad: {{p.cantidad}}</p>
-                </div>
-                <div class="list-card-botones" >
-                  <button class="botonAdd" (click)="eliminar(i)">
-                    <i class="fa fa-trash" aria-hidden="true"></i>
-                  </button>
-                  <hr>
-                </div>
+                  <p>codigo: {{p.codigo_producto}}</p>
+                  <p> ${{p.precio}}</p>
+                  <p>Cantidad:{{p.cantidad}}</p>
+                  <br>
+                  <div class="list-card-botones" >
+                    <button class="boton-eliminar" (click)="eliminar(i)">
+                      <i class="fa fa-trash" aria-hidden="true"></i>
+                    </button>
+                    <hr style="width: 70%;">
+                  </div>   
               </div>
-            </div>
           </div>
         </div>
-        <a (click)="finalizarPedido()"
-        href="https://api.whatsapp.com/send?phone=5491144163757&text={{pedido}}" 
-        style="margin: auto;">
-          <i class="fa fa-whatsapp" style="font-size: 30px;" aria-hidden="true"></i>
-        </a>
-      </div>
+        <div class="finalizarPedido">
+          <a (click)="finalizarPedido()"
+            href="https://api.whatsapp.com/send?phone=5491144163757&text={{pedido}}" 
+            style="margin: auto;"> Enviar
+            <i class="fa fa-whatsapp" aria-hidden="true"></i>
+          </a>
+        </div>
+         
+    </div>
+  </div>
+  
+</div>
+
