--- a/src/app/lista-card/list-card.component.css
+++ b/src/app/lista-card/list-card.component.css
@@ -20,7 +20,7 @@
 }
 
 h1 {
-  font-size: 1.4rem;
+  font-size: 1.6rem;
   color: #4e4e4e;
   padding: 10px 0px 0px 0px;
   display: block;
@@ -29,14 +29,14 @@ h1 {
 }
 
 h2 {
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   color: #505e47;
   font-weight: bold;
   letter-spacing: 0.1pc;
 }
 
 h3 {
-  font-size: 1.3em;
+  font-size: 1.2em;
 }
 
 h4 {
@@ -179,7 +179,7 @@ form label {
 
 /* Smartphones (portrait and landscape) ----------- */
 /* iPads (portrait and landscape) ----------- */
-.cantidad {
+.mano {
   position: fixed;
   right: 48px;
   top: 470px;
@@ -190,7 +190,7 @@ form label {
   padding: 1%;
 }
 
-.cantidad .fa-hand-pointer-o {
+.mano .fa-hand-pointer-o {
   font-size: 20px;
   color: white;
 }
@@ -226,7 +226,7 @@ form label {
 
 .list-card .info-derecha {
   width: 100%;
-  margin-left: 7%;
+  margin: auto;
 }
 
 .list-card .info-derecha .list-card-botones {
