--- a/src/app/lista-card/list-card.component.html
+++ b/src/app/lista-card/list-card.component.html
@@ -1,25 +1,26 @@
 <div>
-	<div class="cantidad" [ngStyle]="{'background-color':colorEstado, 'display': ver}" >
-		<i class="fa fa-level-up" aria-hidden="true"></i>
-	</div>	
-	<div class="list-card" *ngFor="let p of publicaciones " >
-		<div class="list-card" *ngIf="p.categorias=== categoriaEstablecida,">
+	<div class="mano" [ngStyle]="{'background-color':colorEstado, 'display': ver}" >
+		<img style="width: 30px; height: 30px;" src="assets/mano.png" alt="">
+	</div>
+	{{categoriaElegida.descripcion}}
+	<div class="list-card" *ngFor="let p of publicaciones" >
+		<div class="list-card" 	*ngIf="p.categorias===categoriaElegida.codigo_categoria"
+		>
 			<div class="foto">
 				<img class="imgCard" [src]="'assets/' + p.nombreImagen">
 			</div>
 			<div class="info-derecha">
 				<div class="info">
-					<p >{{p.subtitulo}}</p>
-					<h3>{{p.titulo}}</h3>
-					<p style="margin-bottom: 10px;">{{p.descripcion}}</p>
+
+					<h3>{{p.subtitulo}}</h3>
+					<h2>{{p.titulo}}</h2>
 					<p>codigo: {{p.codigo_producto}}</p>
-	
 					<p><i class="fa fa-circle" aria-hidden="true" style="margin-right: 3px;"></i>${{p.precio}}</p>
 					<div class="list-card-botones">
 						<button class="botonAdd" (click)="agregarPedido(p)">
 							<i class="fa fa-plus-square" aria-hidden="true"></i>
 						</button>
-						<button class="botonAdd" (click)="verCard(p)" [routerLink]="['/list-card']" >VER</button>
+						<button class="botonAdd" (click)="verCard(p)" [routerLink]="['/card']" >VER</button>
 					</div>
 				</div>
 				
