--- a/src/app/nav-secundario/nav-secundario.scss
+++ b/src/app/nav-secundario/nav-secundario.scss
@@ -16,6 +16,8 @@ $gris:rgba(26, 26, 25, 0.3);
         text-decoration: none;
         margin-left: 7%;
         margin-top: 2%;
+        border-right: 1px solid $gris;
+        color: gray;
     }
 }
 
