--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,12 +1,10 @@
-<div class="navPedidos-productos">
+<div class="navNav">
     <hr>
     <div class="scrollmenu">
         <a routerLink="/home">Home</a>
         <a href="">Nosotros</a>
         <a href="">Otra Seccion</a>
-        <a 
-        (click)="mostrarSubmenuPaginaI()"
-        >
+        <a (click)="mostrarSubmenuPaginaI()">
         Productos 
         <i class="fa fa-arrow-circle-right" aria-hidden="true"></i>
         </a>
@@ -19,41 +17,21 @@
             <button class="fa fa-facebook-square" style="margin-top: 40px; margin-left: 15px;" ></button>
             <button class="fa fa-instagram" style="margin-top: 10px; margin-left: 15px;"></button>
             <button class="fa fa-envelope" style="margin-top: 10px; margin-left: 15px;"></button>
-            <div (click)="mostrarPedido()">
+            <button class="fa fa-arrow-circle-up" style=" margin-left: 15px;"></button>
+            <div routerLink="/pedidos">
                 <button class="fa fa-shopping-cart" style="margin-top: 20px;"> </button>
             </div>
-            <button class="fa fa-arrow-circle-up" style=" margin-left: 15px;"></button>
         </div>
-    </div>
+    </div> 
 
     <div *ngIf="mostrar" class="menuPaginaI">
         <div class="nav-Secundario">
-            <nav-secundario *ngFor= "let x of apiDatos.getAll(); let i=index" 
-            [categoria]="x"
-            [categoriaIndex]="i +1 "
+            <nav-secundario *ngFor="let c of categorias" 
+            [categoria]="c"
             (onClicked)="elegido($event)"
             ></nav-secundario>   
         </div>
     </div>
-    <div *ngIf="verPedido" class="pedido">
-        <button (click)="mostrarPedido()" style="margin-top: 5%;border: 0px;">
-            <i class="fa fa-window-close" aria-hidden="true"  ></i>
-        </button>
-        <ver-pedido ></ver-pedido>
-    </div>
-
-    <div *ngIf="productoCard" >
-        <button (click)="mostrarProductoCard()" style="margin-top: 5%; border: 0px;">
-            <i class="fa fa-window-close" aria-hidden="true"  ></i>
-        </button>
-        <cardProd-component></cardProd-component>
-    </div>
-
-    <div>
-        <list-card-component
-        (onClicked)="verPublicacion($event)"
-        ></list-card-component>
-    </div>    
     
 </div>
 
