--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -1,14 +1,7 @@
 @import '../styles/tipografias.scss';
-
-$white: #f5f5f5;
-$blue: #03acac;
-$amarillo:rgba(169, 214, 43, 0.822);
-$dark: #6d6d6b;
-$dark2: #313115;
-$gris:rgba(26, 26, 25, 0.3);
 $tamanio-icon:17px;
 
-.navPedidos-productos{
+.navNav{
   height: 35%;
   position: static;
   width: 100%;
@@ -34,7 +27,7 @@ $tamanio-icon:17px;
     }
     
     div.scrollmenu a:hover {
-      color: $dark2  
+      color: white
   }
 
   .menuPaginaI{
@@ -45,7 +38,7 @@ $tamanio-icon:17px;
     background-color: white;
       a {
           font-size: 1rem;
-          color: $dark2;
+          color: black;
           display: inline-block;
           text-align: center;
           text-decoration: none;
@@ -70,7 +63,7 @@ $tamanio-icon:17px;
         top: 250px;
         right: 30px;
         background-color: white;
-        border: 1px solid $gris;
+        border: 1px solid $color-gris;
         border-radius: 15px ;
         display: flex;
         flex-direction: column;
@@ -101,7 +94,7 @@ $tamanio-icon:17px;
         .fa-shopping-cart{
           right: 10px;
           bottom: -110%;
-          color: $gris;
+          color: $color-gris;
           font-size: 30px;
           width: 45px;
           height: 45px;
@@ -111,10 +104,29 @@ $tamanio-icon:17px;
           cursor: pointer;
           border-radius: 10px ;
 
-        }
-        
+        }   
     }
  }
+ .btn-cierreCard{
+  position: absolute;
+  top: 10%;
+  right: 10%;
+  background: none;
+  border: 1px solid $color-gris;
+  height: 40px;
+  width: 40px;
+  border-radius: 100%;
+}
+ .nav-cardComponente{
+   background-color: white;
+   width: 100%;
+   position: fixed;
+   z-index: 999;
+   left: 0px;
+   top: 12%;
+   padding: 2%;
+  }
+  
 
 }
 
