--- a/src/app/protected/protected/productos-panel/lista-prod-admin.html
+++ b/src/app/protected/protected/productos-panel/lista-prod-admin.html
@@ -1,4 +1,3 @@
-  
   <div style="margin: auto;">
     <h1 style="margin: 30px 5px 30px 0px;">Mis productos</h1>
     <div class="row" >
@@ -11,10 +10,12 @@
                       <p class="tituloTarjeta">{{p.titulo}}</p>
                       <p class="subTituloTarjeta">{{p.subtitulo}}</p>
                       <p class="pTarjeta">{{p.descripcion}}</p>
+
                   </div>
               </div>
               <div class="card-head2">
                   <div class="product-detail">
+                    <p class="pTarjeta">categoria:{{p.categorias}}</p>
                     <p #id >codigo: {{p.codigo_producto}}</p>
                     <p >${{p.precio}}</p>
 
